# slam-indoor-code

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rebuild_and_run.sh  rebuild_and_run_cuda.sh  rebuild_and_run_with_cuda.sh
.github/workflows/: cmake-multi-platform.yml
config/: cameraMatrix.xml  filesDump-cameraMatrix.xml  minecraft.xml  oppo-a96.xml  pixel-1.xml  poco.xml  realme8-photos-horizontal.xml  realme8-photos-vertical-2.xml  realme8-photos-vertical.xml  samsung-hp-16to9.xml  samsung-hp-4to3.xml  samsung-hv-2.xml  samsung-hv-4k.xml  samsung-hv-8k.xml  samsung-hv.xml  samsung-vp.xml  samsung-vv.xml  videoCameraPhotosFar-dump.xml  videoCameraPhotosM1-dump.xml  videoCameraPhotosM2-dump.xml  videoCameraPhotosNear-dump.xml  videoDump-cameraMatrix.xml  webcamDump-cameraMatrix.xml
data/: for_calib.mp4.sfk  indoor_speed.mp4.sfk  indoor_test.mp4.sfk
data/photos/1/: 3Dpoints.txt  points1.txt  points2.txt
data/photos/2/: points2.txt
data/photos/3/: points1.txt
data/photos/4/: 3Dpoints.txt  points2.txt
data/photos/5/: report.txt
data/photos/6/: 3Dpoints.txt  points1.txt  report.txt
data/photos/7/: points1.txt  points2.txt  report.txt
data/photos/8/: points1.txt  points2.txt  report.txt
data/two_frames/1/: 3Dpoints.txt  report.txt
data/two_frames/2/: 3Dpoints.txt  points1.txt  report.txt
data/two_frames/3/: 3Dpoints.txt  points2.txt  report.txt
data/two_frames/4/: 3Dpoints.txt  points1.txt  report.txt
data/two_frames/5/: 3Dpoints.txt  points1.txt  points2.txt  report.txt
data/two_frames/6/: 3Dpoints.txt  points2.txt  report.txt
data/two_frames/8/: 3Dpoints.txt  report.txt
data/video_report/: 3Dpoints.txt  main.txt  test.txt
docs/: FastExtractor.md
docs/artifact/: 2dWorldPoseRefining.md
docs/cuda/: with_cuda_1_thread.txt  without_cuda.txt
docs/extracted-matched research/: README.md  samsung-NSU-s.csv  samsung-hall.csv  samsung-kabinet.csv
python_utility/: README.md  requirements.txt  visualize.py  visualizer.py
src/: FastExtractor.md  IOmisc.cpp  IOmisc.h  README.md  bundleAdjustment.cpp  bundleAdjustment.h  cameraCalibration.cpp  cameraCalibration.h  cameraTransition.cpp  cameraTransition.h  fastExtractor.cpp  fastExtractor.h  featureMatching.cpp  featureMatching.h  featureTracking.cpp  featureTracking.h  func.cpp  main.cpp  mainCycle.cpp  mainCycle.h  photosProcessingCycle.cpp  photosProcessingCycle.h  poseEstimation.h  poseestimation.cpp  reportCycleForTwoFramesPair.cpp  reportCycleForTwoFramesPair.h  triangulate.cpp  triangulate.h  videoProcessingCycle.cpp  videoProcessingCycle.h  vizualizationModule.cpp  vizualizationModule.h
src/bundleAdjustment/: bundleAdjustment.cpp  bundleAdjustment.h
src/calibration/: cameraCalibration.cpp  cameraCalibration.h
src/config/: ConfigService.h  config.cpp  config.h  configData.h
src/cycleProcessing/: batch.cpp  batch.h  mainCycle.cpp  mainCycle.h  mainCycleInternals.cpp  mainCycleInternals.h  mainCycleStructures.h
src/cycle_processing/: mainCycle.cpp  mainCycle.h  mainCycleInternals.cpp  mainCycleInternals.h  mainCycleStructures.h
src/delauney-triangulation/: bestFittingPlane.cpp  bestFittingPlane.h  bowyerWatson.cpp  bowyerWatson.h  geomAdditionalFunc.cpp  geomAdditionalFunc.h
src/featureMatching/: featureMatching.cpp  featureMatching.h  featureMatchingCPU.cpp  featureMatchingCUDA.cpp  featureMatchingCommon.cpp  featureMatchingCommon.h
src/legacy/: mainCycle.cpp  mainCycle.h  mainCycleInterBad.cpp  mainCycleInterNotWork.cpp  mainCycleNotWork.cpp  photosProcessingCycle.cpp  videoProcessingCycle.cpp  videoProcessingCycle.h
src/mainModule/bundleAdjustment/: bundleAdjustment.cpp
src/mainModule/cycleProcessing/: batch.cpp  mainCycle.cpp  mainCycleInternals.cpp  mainCycleInternals.h
src/mainModule/featureExtraction/: fastExtractor.cpp
src/mainModule/featureMatching/: featureMatchingCPU.cpp  featureMatchingCUDA.cpp  featureMatchingCommon.cpp
src/mainModule/translation/: cameraTranslation.cpp
src/mainModule/triangulation/: triangulate.cpp
src/misc/: ChronoTimer.cpp  ChronoTimer.h  IOmisc.cpp  IOmisc.h
src/visualizer/: hello.py  igor.py  visualizer.py
src/visualizer/pyBulletVenv/Scripts/: activate  activate.bat
src/vizualization/: vizualizationModule.cpp  vizualizationModule.h
src/vizualization/delauney-triangulation/: bestFittingPlane.cpp  bestFittingPlane.h  bowyerWatson.cpp  bowyerWatson.h  geomAdditionalFunc.cpp  geomAdditionalFunc.h
